assets/css/src/basics/utilities.scss
@import 'variables';

.acc{
  display: none !important;
}

hr{
  border:0;
  border-top:1px solid darken($cream, 5%);
  margin: 14px 0;
}

iframe{

  .resultsVideo &{
    display: block;
    width:100%;
    height:400px;
  }
}

.rtl{
  direction: rtl;
  text-align: left;
}

.ltr{
  direction: ltr;
  text-align: left;
}

.pagination{
  border-top:1px solid darken($cream, 5%);
  margin-top:28px;
  padding-top:28px;
  max-width:100vw;
  overflow-x:scroll;
  overflow-y:hidden;

  & ul{
    padding:0;
    text-align:center;
    margin: 0;
  }

  & li{
    display: inline-block;
    width:auto;
    margin: 0 8px;
    font-size:1.3rem;
  }


  &.postPagination{
    display: block;
    width:100%;

    & > div{
      margin-top:14px;
    }
  }

  @media only screen and (min-width:768px){
    
    &.postPagination{
      display: flex;
      text-align:right;
      padding-top:21px;


      & div{
        flex:1;

        &:first-child{
          text-align:left;
        }
      }
    }
  }
}

